# finance-tracker

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  FUTURE_WORK.md  Makefile  README.md  TODO.md  pyproject.toml
docs/: API.md  ARCHITECTURE.md  CODE_ORGANIZATION.md  CODE_WALKTHROUGH.md  FEATURE_RECOMMENDATIONS.md  GETTING_STARTED.md  LEARNING_GUIDE.md  README.md  README_IMPROVEMENTS.md  csv_parser.md  models.md
finance_tracker/: __init__.py  analyzer.py  budget_tracker.py  categorizer.py  category_mapper.py  category_rules_manager.py  cli.py  config.py  csv_parser.py  logging_config.py  models.py  recurring_detector.py  search_filter.py  storage.py  transaction_editor.py  web_app.py  workflow.py
finance_tracker/core/: __init__.py  models.py
finance_tracker/utils/: __init__.py
sample_data/: README.md  bank_statement_alternative_format.csv  bank_statement_debit_credit_format.csv  bank_statement_feb_2024.csv  bank_statement_jan_2024 copy.csv
tests/: __init__.py  test_analyzer.py  test_categorizer.py  test_category_mapper.py  test_csv_parser.py  test_models.py  test_placeholder.py  test_sample_data.py  test_storage.py  test_workflow.py
web/: index.html  main.js  style.css
